--- a/package.json
+++ b/package.json
@@ -48,12 +48,12 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.29.0",
     "commander": "^11.0.0",
     "electron": "^27.0.2",
     "electron-store": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
     "sqlite3": "^5.1.6",
     "winston": "^3.10.0"
   }
