--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sqlite3": "^5.1.6",
-    "winston": "^3.10.0"
+    "winston": "^3.10.0",
+    "zustand": "^4.5.2"
   }
 }
