--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "desktop:dev": "concurrently \"npm run desktop:client:build:watch\" \"npm run desktop:main:dev\"",
     "start": "node ./src/index.js",
     "lint": "eslint . --ext .js",
-    "e2e": "node ./e2e/index.js"
+    "e2e": "node ./e2e/index.js",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +26,16 @@
     "@babel/eslint-parser": "^7.22.15",
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
+    "@chromatic-com/storybook": "^1.3.3",
+    "@storybook/addon-essentials": "^8.0.8",
+    "@storybook/addon-interactions": "^8.0.8",
+    "@storybook/addon-links": "^8.0.8",
+    "@storybook/addon-onboarding": "^8.0.8",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.2",
+    "@storybook/blocks": "^8.0.8",
+    "@storybook/react": "^8.0.8",
+    "@storybook/react-webpack5": "^8.0.8",
+    "@storybook/test": "^8.0.8",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
     "autoprefixer": "^10.4.16",
@@ -34,12 +46,14 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0-alpha.2",
     "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-storybook": "^0.8.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "nodemon": "^3.0.3",
     "postcss": "^8.4.32",
     "postcss-loader": "^7.3.3",
     "prettier": "^3.0.0",
+    "storybook": "^8.0.8",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.6",
     "ts-loader": "^9.5.1",
@@ -57,5 +71,10 @@
     "sqlite3": "^5.1.6",
     "winston": "^3.10.0",
     "zustand": "^4.5.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
