--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "electron-store": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "sqlite3": "^5.1.6",
     "winston": "^3.10.0",
     "zustand": "^4.5.2"
