--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@storybook/addon-interactions": "^8.0.8",
     "@storybook/addon-links": "^8.0.8",
     "@storybook/addon-onboarding": "^8.0.8",
+    "@storybook/addon-styling-webpack": "^1.0.0",
     "@storybook/addon-webpack5-compiler-swc": "^1.0.2",
     "@storybook/blocks": "^8.0.8",
     "@storybook/react": "^8.0.8",
@@ -68,6 +69,7 @@
     "electron-store": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "sqlite3": "^5.1.6",
     "winston": "^3.10.0",
     "zustand": "^4.5.2"
