--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@storybook/react": "^8.0.8",
     "@storybook/react-webpack5": "^8.0.8",
     "@storybook/test": "^8.0.8",
+    "@svgr/webpack": "^8.1.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
     "autoprefixer": "^10.4.16",
@@ -48,6 +49,7 @@
     "eslint-plugin-prettier": "^5.0.0-alpha.2",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-storybook": "^0.8.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "nodemon": "^3.0.3",
