use router-based navigation

--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
+    "react-router-dom": "^6.23.0",
     "sqlite3": "^5.1.6",
     "winston": "^3.10.0",
     "zustand": "^4.5.2"
